chore: Use tagged images

--- a/.ci/docker-compose.test.yml
+++ b/.ci/docker-compose.test.yml
@@ -2,8 +2,7 @@ services:
   consumer-api:
     container_name: consumer-api-test
     hostname: consumer-api
-    image: consumer-api
-    #image: ghcr.io/nmshd/backbone-consumer-api:test
+    image: consumer-api:test
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -22,7 +21,7 @@ services:
   admin-ui:
     container_name: admin-ui-test
     hostname: admin-ui
-    image: admin-ui
+    image: admin-ui:test
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -38,8 +37,7 @@ services:
 
   event-handler-service:
     container_name: event-handler-service-test
-    image: event-handler-service
-    #image: ghcr.io/nmshd/backbone-event-handler:test
+    image: event-handler-service:test
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
@@ -53,7 +51,7 @@ services:
 
   sse-server:
     container_name: sse-server-test
-    image: sse-server
+    image: sse-server:test
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     configs:
@@ -62,7 +60,7 @@ services:
 
   database-migrator:
     container_name: database-migrator-test
-    image: database-migrator
+    image: database-migrator:test
     depends_on:
       seed-database:
         condition: service_completed_successfully
@@ -100,7 +98,7 @@ services:
 
   seed-client:
     container_name: seed-client-test
-    image: seed-client
+    image: seed-client:test
     depends_on:
       consumer-api:
         condition: service_healthy
