refactor: change identity address database type and generate postgres migrations

--- a/ConsumerApi/appsettings.override.json
+++ b/ConsumerApi/appsettings.override.json
@@ -52,7 +52,11 @@
                     //           "ConnectionString": "Server=localhost;Database=enmeshed;User Id=sa;Password=Passw0rd;TrustServerCertificate=True" // sqlserver
                 },
                 "PushNotifications": {
-                    "Provider": "Dummy"
+                    "Providers": {
+                      "Dummy": {
+                        "Enabled":  "true"
+                      }
+                    }
                 }
             }
         },
