--- a/ConsumerApi/Dockerfile
+++ b/ConsumerApi/Dockerfile
@@ -56,9 +56,8 @@ COPY . .
 ARG VERSION
 
 RUN dotnet restore "ConsumerApi/ConsumerApi.csproj"
-RUN dotnet publish --configuration Release --output /app/publish --no-restore "ConsumerApi/ConsumerApi.csproj"
+RUN dotnet publish -p:Version=${VERSION} --configuration Release --output /app/publish --no-restore "ConsumerApi/ConsumerApi.csproj"
 RUN dotnet publish --configuration Release --output /app/publish/health "HealthCheck/HealthCheck.csproj"
-RUN dotnet build -p:Version=${VERSION} "ConsumerApi/ConsumerApi.csproj"
 
 ### Final ####
 FROM mcr.microsoft.com/dotnet/aspnet:8.0.6-jammy-chiseled
