--- a/EventHandlerService/src/EventHandlerService/Dockerfile
+++ b/EventHandlerService/src/EventHandlerService/Dockerfile
@@ -71,6 +71,8 @@ RUN dotnet restore "EventHandlerService/src/EventHandlerService/EventHandlerServ
 
 COPY . .
 
+ARG VERSION
+
 WORKDIR "/src/EventHandlerService/src/EventHandlerService"
 RUN dotnet build "EventHandlerService.csproj" -c Release -o /app/build --no-restore
 
