--- a/Modules/Devices/src/Devices.AdminCli/Dockerfile
+++ b/Modules/Devices/src/Devices.AdminCli/Dockerfile
@@ -23,6 +23,8 @@ RUN dotnet restore "Modules/Devices/src/Devices.AdminCli/Devices.AdminCli.csproj
 
 COPY . .
 
+ARG VERSION
+
 WORKDIR "/src/Modules/Devices/src/Devices.AdminCli"
 RUN dotnet publish --no-restore -c Release -o /app/publish "Devices.AdminCli.csproj"
 
