--- a/DatabaseMigrator/Dockerfile
+++ b/DatabaseMigrator/Dockerfile
@@ -66,6 +66,8 @@ RUN dotnet restore "DatabaseMigrator/DatabaseMigrator.csproj"
 
 COPY . .
 
+ARG VERSION
+
 WORKDIR "/src/DatabaseMigrator"
 RUN dotnet build "DatabaseMigrator.csproj" -c Release --output /app/build --no-restore
 
