--- a/.ci/docker-compose.test.yml
+++ b/.ci/docker-compose.test.yml
@@ -2,7 +2,7 @@ services:
   consumer-api:
     container_name: consumer-api-test
     hostname: consumer-api
-    image: consumer-api:test
+    image: consumer-api:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -21,7 +21,7 @@ services:
   admin-ui:
     container_name: admin-ui-test
     hostname: admin-ui
-    image: admin-ui:test
+    image: admin-ui:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -37,7 +37,7 @@ services:
 
   event-handler-service:
     container_name: event-handler-service-test
-    image: event-handler-service:test
+    image: event-handler-service:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
@@ -51,7 +51,7 @@ services:
 
   sse-server:
     container_name: sse-server-test
-    image: sse-server:test
+    image: sse-server:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     configs:
@@ -60,7 +60,7 @@ services:
 
   database-migrator:
     container_name: database-migrator-test
-    image: database-migrator:test
+    image: database-migrator:0.0.1
     depends_on:
       seed-database:
         condition: service_completed_successfully
@@ -98,7 +98,7 @@ services:
 
   seed-client:
     container_name: seed-client-test
-    image: seed-client:test
+    image: seed-client:0.0.1
     depends_on:
       consumer-api:
         condition: service_healthy
