Use Caching in GitHub Actions (#697)
* ci: add caching to integration tests

* ci: attempt to use actions/setup-node

* ci : fix path issue

* ci: add working directories

* ci: fix node path

* ci: change paths

* ci: wip

* wip

* wip

* ci: wip

* ci: wip

* ci: wip

* ci: wip

* ci: introduce caching where appropriate

* wip

* wip

* wip

* wip

* wip

* wip

* test: Single compose file

* test: Remove version

* test: build manually

* test: Remove version

* fix: Invert ifs

* test: Use old script

* test: add env variable

* test: Cache manually

* test: Use min caching

* test: Cache Nuget

* test: Remove nuget

* test: Move cache

* test: Add dotnet setup

* test: Remove dotnet

* Use NuGet Package locking

* test: Use local docker registry

* test: Use local registry

* test:change registry port to 6000

* test: Use own steps for pushing

* test: fix image names

* test: Remove nuget locks

* test: remove pushing script

* test: Fix image names

* test: Fix image names again, parallel building

* test: add down cmd to group

* test: Use registry cache-to

* fix: typo

* fix: Remove registry cache-to

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* chore: Remove unused/commented out code

* chore: Remove docker setup in test runner

* chore: Implement caching for integration tests and transport tests

* Add cached time for SQL Server

* chore: Remove temporary Cache Times file

* chore: Remove temporary test workflow file

* chore: Remove commented out version numbers

* chore: Update versions of cache and setup-node actions

* chore: Update node version and remove check-latest

* chore: Rename build job, step names, variable names

* chore: Remove unnecessary docker logs

* chore: Load docker images

--- a/.ci/docker-compose.test.yml
+++ b/.ci/docker-compose.test.yml
@@ -1,11 +1,8 @@
-version: "3.3"
 services:
   consumer-api:
     container_name: consumer-api-test
     hostname: consumer-api
-    build:
-      context: ..
-      dockerfile: ConsumerApi/Dockerfile
+    image: consumer-api:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -24,9 +21,7 @@ services:
   admin-ui:
     container_name: admin-ui-test
     hostname: admin-ui
-    build:
-      context: ..
-      dockerfile: AdminApi/src/AdminApi/Dockerfile
+    image: admin-ui:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -42,9 +37,7 @@ services:
 
   event-handler-service:
     container_name: event-handler-service-test
-    build:
-      context: ..
-      dockerfile: EventHandlerService/src/EventHandlerService/Dockerfile
+    image: event-handler-service:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     depends_on:
@@ -58,9 +51,7 @@ services:
 
   sse-server:
     container_name: sse-server-test
-    build:
-      context: ..
-      dockerfile: SseServer/src/SseServer/Dockerfile
+    image: sse-server:0.0.1
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     configs:
@@ -69,9 +60,7 @@ services:
 
   database-migrator:
     container_name: database-migrator-test
-    build:
-      context: ..
-      dockerfile: DatabaseMigrator/Dockerfile
+    image: database-migrator:0.0.1
     depends_on:
       seed-database:
         condition: service_completed_successfully
@@ -109,9 +98,7 @@ services:
 
   seed-client:
     container_name: seed-client-test
-    build:
-      context: ..
-      dockerfile: Modules/Devices/src/Devices.AdminCli/Dockerfile
+    image: seed-client:0.0.1
     depends_on:
       consumer-api:
         condition: service_healthy
