Consumer API: Endpoint for reading the current major version of the Backbone (#704)
* feat: add version endpoint

* fix: return the actual majorVersion of the backbone

* refactoring

* refactor: rename

* fix: implement another approach for getting the major version of the backbone

* fix: version

* Revert "fix: version"

This reverts commit 14cd86effdf4dbb0461f15bc832c970cd0698e8d.

* feat: add exception when version is null or empty

* fix: remove hardcoded version & add version to other dockerfiles

* Revert "fix: remove hardcoded version & add version to other dockerfiles"

This reverts commit 29a32ace1b5b816cc760d5795a71da1b8435d39f.

* fix: remove hardcoded version

* Revert "fix: remove hardcoded version"

This reverts commit 8cb140284978be97b7f2bc001610fd5ab9af3dc0.

* fix: remove hardcoded version number

* fix: build arg version

* fix: add run echo command to version

* fix: remove echo

* fix: use publish

* fix: add version to property group

* Revert "fix: add version to property group"

This reverts commit 6a270cabc3de4a51cae09fa4468462e46940882b.

* chore: simplify docker file

* chore: add version to dockerfiles

* chore: add version tag to build container image

* refactor: add VersionResponse

* fix: formatting

* chore: change service to singleton

* chore: remove nullable operator

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/ConsumerApi/Dockerfile
+++ b/ConsumerApi/Dockerfile
@@ -4,7 +4,7 @@
 # (see https://github.com/dotnet/dotnet-docker/discussions/4527).
 # They are copied from https://github.com/ubuntu-rocks/dotnet/issues/21
 ################################################################################################################
-FROM golang:1.22 as chisel
+FROM golang:1.22 AS chisel
 
 RUN git clone --depth 1 -b main https://github.com/canonical/chisel /opt/chisel
 WORKDIR /opt/chisel
@@ -52,6 +52,8 @@ RUN mkdir /rootfs \
 
 WORKDIR /src
 COPY . .
+
+ARG VERSION
 
 RUN dotnet restore "ConsumerApi/ConsumerApi.csproj"
 RUN dotnet publish --configuration Release --output /app/publish --no-restore "ConsumerApi/ConsumerApi.csproj"
