--- a/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
+++ b/EventHandlerService/src/EventHandlerService/EventHandlerService.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="cp &quot;$(SolutionDir)/appsettings.override.json&quot; ." WorkingDirectory="$(OutDir)"/>
+        <Exec Command="cp &quot;$(SolutionDir)/appsettings.override.json&quot; ." WorkingDirectory="$(OutDir)" Condition="'$(Configuration)' == 'Debug'"/>
     </Target>
 
 </Project>
