--- a/SseServer/src/SseServer/appsettings.json
+++ b/SseServer/src/SseServer/appsettings.json
@@ -1,5 +1,10 @@
 {
     "AllowedHosts": "*",
+    "Infrastructure": {
+        "EventBus": {
+            "SubscriptionClientName": "ConsumerApi"
+        }
+    },
     "Modules": {
         "Devices": {
             "Application": {
