chore: Rename seed-client image to admin-cli

--- a/.ci/docker-compose.test.yml
+++ b/.ci/docker-compose.test.yml
@@ -97,8 +97,8 @@ services:
         condition: service_healthy
 
   seed-client:
-    container_name: seed-client-test
-    image: seed-client:0.0.1
+    container_name: admin-cli-test
+    image: admin-cli:0.0.1
     depends_on:
       consumer-api:
         condition: service_healthy
