Remove docker build summary from CI, rename seed-client image to admin-cli (#718)
* chore: Remove docker build summary

* chore: Rename seed-client image to admin-cli

* chore: Also rename seed-client service to admin-cli

---------

Co-authored-by: mergify[bot] <37929162+mergify[bot]@users.noreply.github.com>

--- a/.ci/docker-compose.test.yml
+++ b/.ci/docker-compose.test.yml
@@ -96,9 +96,9 @@ services:
       database:
         condition: service_healthy
 
-  seed-client:
-    container_name: seed-client-test
-    image: seed-client:0.0.1
+  admin-cli:
+    container_name: admin-cli-test
+    image: admin-cli:0.0.1
     depends_on:
       consumer-api:
         condition: service_healthy
