--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/acli/buildContainerImage.js
         env:
@@ -64,7 +64,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/aui/buildContainerImage.js
         env:
@@ -95,7 +95,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/capi/buildContainerImage.js
         env:
@@ -126,7 +126,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/eh/buildContainerImage.js
         env:
@@ -157,7 +157,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/dbm/buildContainerImage.js
         env:
@@ -188,7 +188,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/idj/buildContainerImage.js
         env:
@@ -219,7 +219,7 @@ jobs:
         with:
           version: "lab:latest"
           driver: cloud
-          endpoint: "jssoft/js-soft"
+          endpoint: ${{ secrets.CLOUD_BUILDER_ENDPOINT }}
       - name: Build and Push Container Image
         run: ./.ci/sses/buildContainerImage.js
         env:
