feat: enable health check configuration for consumer api

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -14,15 +14,29 @@
                 "MinimumBackoff": 2,
                 "MaximumBackoff": 120
             }
+        },
+        "SqlDatabaseConfiguration": {
+            "EnableHealthCheck": false
         }
     },
     "Modules": {
-        "Challenges": {},
+        "Challenges": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
+            }
+        },
         "Quotas": {
             "Application": {
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         },
@@ -33,6 +47,11 @@
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
                 }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
             }
         },
         "Files": {
@@ -40,6 +59,11 @@
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         },
@@ -51,6 +75,11 @@
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
                 }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
             }
         },
         "Relationships": {
@@ -58,6 +87,11 @@
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         },
@@ -67,6 +101,11 @@
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
                 }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
             }
         },
         "Tokens": {
@@ -74,6 +113,11 @@
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         }
