feat: enable health check configuration for admin api

--- a/AdminApi/src/AdminApi/appsettings.json
+++ b/AdminApi/src/AdminApi/appsettings.json
@@ -12,11 +12,23 @@
         }
     },
     "Modules": {
+        "Challenges": {
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
+            }
+        },
         "Quotas": {
             "Application": {
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         },
@@ -26,6 +38,11 @@
                 "Pagination": {
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
+                }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
                 }
             }
         }
