feat: enable health check configuration for sse server checks

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -51,6 +51,13 @@
             "Infrastructure": {
                 "SqlDatabase": {
                     "EnableHealthCheck": true
+                },
+                "PushNotifications": {
+                    "Providers": {
+                        "sse": {
+                            "EnableHealthCheck": true
+                        }
+                    }
                 }
             }
         },
