fix: handle data annotation validation error

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -55,6 +55,8 @@
                 "PushNotifications": {
                     "Providers": {
                         "sse": {
+                            "enabled": true,
+                            "SseServerBaseAddress": "",
                             "EnableHealthCheck": true
                         }
                     }
