fix: handle data annotation validation error

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -55,6 +55,7 @@
                 "PushNotifications": {
                     "Providers": {
                         "sse": {
+                            "SseServerBaseAddress": "localhost",
                             "EnableHealthCheck": true
                         }
                     }
