fix: handle data annotation validation error

--- a/ConsumerApi/appsettings.json
+++ b/ConsumerApi/appsettings.json
@@ -55,7 +55,7 @@
                 "PushNotifications": {
                     "Providers": {
                         "sse": {
-                            "SseServerBaseAddress": "localhost",
+                            "SseServerBaseAddress": "http://localhost:8083",
                             "EnableHealthCheck": true
                         }
                     }
