fix: handle data annotation validation error

--- a/.ci/appsettings.override.postgres.json
+++ b/.ci/appsettings.override.postgres.json
@@ -48,6 +48,10 @@
                     "Providers": {
                         "dummy": {
                             "enabled": true
+                        },
+                        "sse": {
+                            "enabled": true,
+                            "SseServerBaseAddress": "http://localhost:8083"
                         }
                     }
                 }
