--- a/Modules/Files/src/Files.Jobs.SanityCheck/Properties/launchSettings.json
+++ b/Modules/Files/src/Files.Jobs.SanityCheck/Properties/launchSettings.json
@@ -1,14 +1,15 @@
 {
-    "profiles": {
-        "Files.Jobs.SanityCheck": {
-            "commandName": "Project",
-            "environmentVariables": {
-                "DOTNET_ENVIRONMENT": "Development"
-            },
-            "dotnetRunMessages": true
-        },
-        "Docker": {
-            "commandName": "Docker"
-        }
+  "profiles": {
+    "Files.Jobs.SanityCheck": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development"
+      },
+      "dotnetRunMessages": true,
+      "workingDirectory": "bin/Debug/net8.0"
+    },
+    "Docker": {
+      "commandName": "Docker"
     }
+  }
 }
