feat: enable health check configuration for sse server

--- a/SseServer/src/SseServer/appsettings.json
+++ b/SseServer/src/SseServer/appsettings.json
@@ -13,6 +13,11 @@
                     "DefaultPageSize": 50,
                     "MaxPageSize": 200
                 }
+            },
+            "Infrastructure": {
+                "SqlDatabase": {
+                    "EnableHealthCheck": true
+                }
             }
         }
     },
