--- a/docker-compose/docker-compose.services.yml
+++ b/docker-compose/docker-compose.services.yml
@@ -17,7 +17,7 @@ services:
       - postgres
       - seq
     volumes:
-      - ./consumerapi.appsettings.override.json:/app/appsettings.override.json
+      - ./appsettings.override.json:/app/appsettings.override.json
 
   admin-ui:
     image: ghcr.io/nmshd/backbone-admin-ui:v2.5.0
@@ -26,4 +26,4 @@ services:
     ports:
       - "8082:8080"
     volumes:
-      - ./adminui.appsettings.override.json:/app/appsettings.override.json
+      - ./appsettings.override.json:/app/appsettings.override.json
