--- a/SseServer/src/SseServer/SseServer.csproj
+++ b/SseServer/src/SseServer/SseServer.csproj
@@ -22,7 +22,9 @@
         <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj"/>
         <ProjectReference Include="..\..\..\BuildingBlocks\src\BuildingBlocks.API\BuildingBlocks.API.csproj"/>
         <ProjectReference Include="..\..\..\Modules\Devices\src\Devices.ConsumerApi\Devices.ConsumerApi.csproj"/>
+    </ItemGroup>
 
+    <ItemGroup>
         <Content Include="..\..\..\appsettings.override.json" Condition="$(Configuration) == Debug">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
