--- a/EventHandlerService/src/EventHandlerService/Properties/launchSettings.json
+++ b/EventHandlerService/src/EventHandlerService/Properties/launchSettings.json
@@ -5,7 +5,7 @@
       "commandName": "Project",
       "environmentVariables": {
       },
-      "workingDirectory": "bin/Debug/net8.0"
+      "workingDirectory": "bin/Debug/$(TargetFramework)"
     }
   }
 }
