--- a/Modules/Challenges/src/Challenges.Jobs.Cleanup/Properties/launchSettings.json
+++ b/Modules/Challenges/src/Challenges.Jobs.Cleanup/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "Default": {
       "commandName": "Project",
-      "workingDirectory": "bin/Debug/net8.0"
+      "workingDirectory": "bin/Debug/$(TargetFramework)"
     }
   }
 }
