chore: Add instanceUrl to common appsettings override

--- a/appsettings.override.json
+++ b/appsettings.override.json
@@ -53,6 +53,9 @@
       }
     },
     "Devices": {
+      "Application": {
+        "InstanceUrl": "localhost"
+      },
       "Infrastructure": {
         "SqlDatabase": {
           "Provider": "Postgres",
@@ -87,6 +90,9 @@
       }
     },
     "Messages": {
+      "Application": {
+        "InstanceUrl": "localhost"
+      },
       "Infrastructure": {
         "SqlDatabase": {
           "Provider": "Postgres",
